# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Removed references to MD2, as OpenSSL 1.x.x doesn't support it anymore
  [alexandru]

o [NSE] Added GIOP library and a small script that makes use of it:
  - giop-info Queries the CORBA naming server for a list of objects
  [Patrik]

o [NSE] Added a Oracle TNS library and two new scripts that make use of it.
  The scripts are:
  - oracle-brute uses the brute and tns library to perform password guessing
  - oracle-enum-users attempts to determine valid Oracle user names
  [Patrik]

o [NSE] Added a smallish Lotus Domino rpc library (nrpc.lua) and some Lotus
  Domino oriented scripts:
  - domino-enum-users guesses users and attempts to download ID files by
                      exploiting (CVE-2006-5835).
  - domino-enum-passwords attempts to download Internet passwords and ID files
                          from the web server.
  - domcon-brute performs password guessing against the remote console.
  - domcon-cmd adds support for running custom remote console commands.
  [Patrik]

o [NSE] Added an Informix library and three scripts that make use of it:
  - informix-brute uses the brute framework to perform password guessing
  - informix-query add support for running SQL queries against Informix
  - informix-tables lists table- and column-names for a given database
  [Patrik]

o [NSE] Added two new scripts http-brute.nse and http-form-brute that attempt
  to perform password guessing against web servers and applications. [Patrik]

o [NSE] Added svn-brute, which attempts to perform password guessing against
  the subversion service. [Patrik]

o [NSE] The nmap.connect function can now accept host and port tables
  (like those provided to the action function) in place of a string
  and a number. The motivation behind this is to easily support Server
  Name Indication for SSL sockets by reading host.targetname. [David
  Fifield]

o [NSE] Added wdb-version, which discovers information from a VxWorks